add work experience

--- a/index.html
+++ b/index.html
@@ -1,7 +1,160 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <title>About JianCheng</title>
+        <style>
+            h1 {
+                padding: 0.5em 0em 0em 0em;
+                background-color: #21618C;
+                height: 60px;
+                color: white;
+            }
+            h2 {
+                padding: 0.5em 0em 0em 0.5em;
+                color: black;
+            }
+            h3 {
+                padding: 0.5em 0em 0em 1em;
+                color: black;
+            }
+            hr {
+                padding: 0em 0em 0em 2em;
+            }
+            ol {
+                padding: 0em 0em 0em 5em;
+                font-family: Arial, Helvetica, sans-serif;
+                line-height: 24px;
+            }
+            .all_h{
+                font-family: "微軟正黑體";
+            }
+            .p1 {
+                padding: 0em 0em 0em 2em;
+                font-family: "Lucida Console", "Courier New", monospace;
+                line-height: 24px;
+            }
+            .p2 {
+                padding: 0em 0em 0em 3em;
+                font-family: "Lucida Console", "Courier New", monospace;
+                line-height: 24px;                
+            }
+
+        </style>
     </head>
     <body>
-        Hello World!
+        <!--title-->
+        <div class="section text-v-center">
+            <h1 class="all_h">
+                &nbsp;&nbsp; JianCheng (David) Chang
+            </h1>
+            <span>
+                <p class="p1">
+                    Data Analyst/Scientist
+                </p>
+            </span>
+            <span>
+                <p class="p1">
+                    Apply myself to be a statistical expert/consultant, keep improving programming, English and Japanese to enchance competitiveness. <br>
+                    During the office time, work efficient and innovative. <br>
+                    After work, enrich life by reading and exercising.
+                </p>
+
+            </span>
+        </div>
+        <hr align="left" size="10" color="#85C1E9" style=" margin:20px;">
+        <!--Work Experience-->
+        <div>
+            <h2 class="all_h">
+                &nbsp;&nbsp; Work Experience
+            </h2>
+            <!--Sea limited-->
+            <h3 class="all_h">
+                &nbsp;&nbsp; <u>Data Analyst</u>
+            </h3>
+            <p class="p2">
+                <strong>Sea Limited</strong>, Taipei City, Taiwan, <i>April 2022 - present</i><br>
+                <ol>
+                    <li>Data Cleaning - Financial Data Cleansing Automation</li>
+                </ol>
+            </p>
+            <!--Topco Global-->
+            <h3 class="all_h">
+                &nbsp;&nbsp; <u>Data Analyst</u>
+            </h3>
+            <p class="p2">
+                <strong>Topco Global</strong>, Taipei City, Taiwan, <i>July 2020 - April 2022</i><br>
+                <ol>
+                    <li>Power BI: Importing, teaching and supporting </li>
+                    <li>
+                        Semi-conduction Business
+                        <ul>
+                            <li>Power BI report - Material SPC Chart</li>
+                            <li>Material Consumption Prediction and Procuring Recommendation</li>
+                            <li>PDF Text Capturing Automation</li>
+                            <li>PDF Transfer to Excel Tool</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Retail Business
+                        <ul>
+                            <li>Power BI Report - Retail Overview</li>
+                            <li>Power BI Report - Basket Analysis</li>
+                            <li>Member's Repurchasing Probability in Next 30 days Prediction and Sales Call Member list Recommendation</li>
+                        </ul>
+                    </li>
+                    <li>Exercise - CPBL Win/Loss Analysis</li>
+                    <li>Solar Energy Business
+                        <ul>
+                            <li>Inverter Input Current Auto-Comparison and Visualization</li>
+                            <li>Taiwan Insolation Duration Visualization</li>
+                            <li>Solar Module Predictive Maintenance</li>
+                        </ul>
+                    </li>
+                </ol>
+            </p>
+            <!--Coretronic-->
+            <h3 class="all_h">
+                &nbsp;&nbsp; <u>MIS Senior Engineer</u>
+            </h3>
+            <p class="p2">
+                <strong>Coretronic</strong>, Hsinchu, Taiwan, <i>April 2019 - June 2020</i><br>
+                <ol>
+                    <li>Sales Forecast</li>
+                    <li>Experimental Data Analysis - Gauge RR and Association Rule</li>
+                    <li>Power BI Report: FAB's Yield, Efficiency and CPK Value</li>
+                    <li>Power Bi Support</li>
+                    <li>Last Time buy Estimating</li>
+                    <li>Warranty Price Calculation by Reliability</li>
+                </ol>
+            </p>
+            <!--IE Industrial Engineer-->
+            <h3 class="all_h">
+                &nbsp;&nbsp; <u>IE Industrial Engineer</u>
+            </h3>
+            <p class="p2">
+                <strong>SPIL</strong>, Hsinchu, Taiwan, <i>January 2018 - March 2020</i><br>
+                <ol>
+                    <li>Product Price Report Automation</li>
+                    <li>Monthly Cost Calculation Automation</li>
+                    <li>System Design: Testing Time Comparison System</li>
+                    <li>Testing Time prediction Modeling: Establish a Testing Time Prediction Model for IC-Testing</li>
+                </ol>
+            </p>
+            <!--Testing Process Engineer (WSPE)-->
+            <h3 class="all_h">
+                &nbsp;&nbsp; <u>Testing Process Engineer (WSPE)</u>
+            </h3>
+            <p class="p2">
+                <strong>SPIL</strong>, Hsinchu, Taiwan, <i>October 2015 - December 2018</i><br>
+                <ol>
+                    <li>Defend T. corp. Suspect the Parameter of the Prober Machine by DOE</li>
+                    <li>N. corp. Probes' Life DOE Test - Improve Probes' Life</li>
+                    <li>Participate and Support to Optimize WS Production Line Automation</li>
+                    <li>Parameter Control Automation - Get Internal Award</li>
+                    <li>Machine Log Analysis - Get Internal Award </li>
+                </ol>
+            </p>              
+        </div>
     </body>
 </html>
