--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>About JianCheng</title>
-    <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         h1 {
             padding: 0.5em 0em 0em 0em;
@@ -131,20 +131,20 @@
                     <button class="btn btn-primary btn-lg" type="button"
                         onclick="window.open('https://www.linkedin.com/in/jian-cheng-chang-%E5%BC%B5%E5%81%A5%E8%AA%A0-56798b9a/')">
                         <a class="hyperlink">
-                            <img class="button_img" src="/assets/image/linkedin.png" />
+                            <img class="button_img" src="assets/image/linkedin.png" />
                             <span>LinkedIn</span>
                         </a>
                     </button>
                     <button class="btn btn-info btn-lg" type="button"
                         onclick="window.open('https://www.facebook.com/profile.php?id=100000197862435')">
                         <a class="hyperlink">
-                            <img class="button_img" src="/assets/image/facebook.png" />
+                            <img class="button_img" src="assets/image/facebook.png" />
                             <span>Facebook</span>
                         </a>
                     </button>
                     <button class="btn btn-success btn-lg" type="button" onclick="window.open('https://aris.tw/')">
                         <a class="hyperlink">
-                            <img class="button_img" src="/assets/image/website_logo.png" />
+                            <img class="button_img" src="assets/image/website_logo.png" />
                             <span>Blog</span>
                         </a>
                     </button>
