--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!--title-->
     <main>
-        <div class="container py-4">
-            <div class="h-100 p-5 text-bg-dark rounded-3">
+        <div class="container py-3">
+            <div class="p-5 mb-1 text-bg-dark rounded-1">
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">JianCheng (David) Chang</h1>
                     <p class="p1">
@@ -58,7 +58,7 @@
                 <button class="btn btn-outline-info" type="button" data-toggle="collapse" data-target="#aboutme" aria-expanded="false" aria-controls="aboutme">
                 About Me
                 </button>
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp">
+                <button class="btn btn-outline-success" type="button" data-toggle="collapse" data-target="#workexp" aria-expanded="false" aria-controls="workexp">
                 Work Experience
                 </button>
             </div>
